[gd_scene load_steps=19 format=2]

[ext_resource path="res://BattleBackground.png" type="Texture" id=1]
[ext_resource path="res://Actual Idle Frame 1.png" type="Texture" id=2]
[ext_resource path="res://Actual Idle Frame 3.png" type="Texture" id=3]
[ext_resource path="res://Actual Idle Frame 4.png" type="Texture" id=4]
[ext_resource path="res://Actual Idle Frame 2.png" type="Texture" id=5]
[ext_resource path="res://Banana2.png" type="Texture" id=6]
[ext_resource path="res://Banana3.png" type="Texture" id=7]
[ext_resource path="res://Banana1.png" type="Texture" id=8]
[ext_resource path="res://Banana4.png" type="Texture" id=9]
[ext_resource path="res://Control.gd" type="Script" id=10]
[ext_resource path="res://MushWithShard1.png" type="Texture" id=11]
[ext_resource path="res://MushWithShard2.png" type="Texture" id=12]
[ext_resource path="res://MushWithShard3.png" type="Texture" id=13]
[ext_resource path="res://MushWithShard4.png" type="Texture" id=14]
[ext_resource path="res://First_Banana.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 15 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground"]
margin_right = 1544.0
margin_bottom = 847.0
texture = ExtResource( 1 )
expand = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="RegMushy" type="AnimatedSprite" parent="Control"]
position = Vector2( 296, 624 )
scale = Vector2( 6, 6 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Control"]
position = Vector2( 1269, 611 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 2
playing = true
flip_h = true

[node name="BananaHealth" type="ProgressBar" parent="Control/AnimatedSprite2"]
margin_left = -102.5
margin_top = -113.5
margin_right = 108.5
margin_bottom = -84.5
value = 100.0

[node name="Button" type="Button" parent="Control"]
margin_left = 488.0
margin_top = 582.0
margin_right = 1004.0
margin_bottom = 784.0
text = "Click To Attack"

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 88.0
margin_top = 392.0
margin_right = 299.0
margin_bottom = 421.0
rect_scale = Vector2( 2, 2 )
value = 100.0

[node name="YellowMushy" type="AnimatedSprite" parent="Control"]
visible = false
position = Vector2( 297, 618 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 3 )
frame = 2
playing = true

[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
